configuracion de hsqldb

--- a/dev/Tpl/src/main/webapp/WEB-INF/constant.properties
+++ b/dev/Tpl/src/main/webapp/WEB-INF/constant.properties
@@ -1,7 +1,7 @@
 
 # Acceso a la base de datos en memoria
-db.driverClassName=net.sf.log4jdbc.DriverSpy
-db.url=jdbc:log4jdbc:hsqldb:mem:hexactalabs
+db.driverClassName=org.hsqldb.jdbcDriver
+db.url=jdbc:hsqldb:mem:hexactalabs
 db.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 db.username=sa
 db.password=
