First step - se cambia wicket por angular y se agrega el soporte a cxf para los servicios rest usados en front end

--- a/dev/Tpl/src/main/resources/security.properties
+++ b/dev/Tpl/src/main/resources/security.properties
@@ -2,7 +2,7 @@
 #full_component_id=action,role
 #Sample: 
 #pageId_containerId_componentId=RENDER,ROLE_SUPERVISOR
-linkToBooksPage=RENDER,ROLE_SUPERVISOR
+#linkToBooksPage=RENDER,ROLE_SUPERVISOR
 
 #Pages
 #page_class_name=action,role
