--- a/dev/Tpl/src/main/webapp/WEB-INF/constant.properties
+++ b/dev/Tpl/src/main/webapp/WEB-INF/constant.properties
@@ -16,7 +16,7 @@ db.password=
 #db.password=root
 
 # Otros datos de cualquier base de datos
-db.defaultAutoCommit=false
+db.defaultAutoCommit=true
 db.poolPreparedStatements=true
 db.initialSize=1
 db.maxActive=90
