--- a/dev/Tpl/pom.xml
+++ b/dev/Tpl/pom.xml
@@ -373,9 +373,39 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.1</version>
 		</dependency>
-
-
-
+		
+		<!-- CXF Rest services -->
+		<dependency>
+		   <groupId>org.apache.cxf</groupId>
+		   <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+		   <version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-transports-http</artifactId>
+		    <version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-transports-http-jetty</artifactId>
+		    <version>${cxf.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-jaxrs</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+	
 	</dependencies>
 
 	<properties>
@@ -390,7 +420,13 @@
 
 		<!-- Spring Security -->
 		<spring-security.version>3.0.2.RELEASE</spring-security.version>
+		
+		<!-- Jackson -->
+		<jackson.version>1.8.6</jackson.version>
 
+		<!-- CXF -->
+		<cxf.version>2.7.7</cxf.version>
+		
 		<!-- Maven compiler settings -->
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
