--- a/dev/Tpl/src/main/webapp/WEB-INF/web.xml
+++ b/dev/Tpl/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	 		classpath:spring/spring-service.xml
 	 		classpath:spring/spring-model.xml
 	 		classpath:spring/spring-persistence.xml
-			 		
+			classpath:cxf-services.xml
 		</param-value>
 	</context-param>
  
@@ -35,39 +35,9 @@
 		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
 		<init-param>
 			<param-name>singleSession</param-name>
-			<param-value>true</param-value>
+			<param-value>false</param-value>
 		</init-param>
 	</filter>
-
-	<filter>
-		<filter-name>wicketFilter</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-		<init-param>
-			<param-name>applicationFactoryClassName</param-name>
-			<param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>
-		</init-param>
-		<init-param>
-			<param-name>configuration</param-name>
-			<param-value>development</param-value>
-		</init-param>
-	</filter>
- 	
- 	<filter>
-		<filter-name>WicketSessionFilter</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.servlet.WicketSessionFilter</filter-class>
-		<init-param>
-			<param-name>filterName</param-name>
-			<param-value>wicketFilter</param-value>
-		</init-param>
-	</filter>
-	
-	<filter-mapping>
-		<filter-name>wicketFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-		<dispatcher>REQUEST</dispatcher>
-		<dispatcher>ERROR</dispatcher>
-	</filter-mapping>
-
 
 	<filter-mapping>
 		<filter-name>OpenSessionInViewFilter</filter-name>
@@ -86,7 +56,15 @@
 	<context-param>
 		<param-name>configuration</param-name>
 		<param-value>development</param-value>
-		<!-- <param-value>deployment</param-value> -->
 	</context-param>
 	
+	<servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
 </web-app>
