--- a/dev/Tpl/src/main/webapp/WEB-INF/web.xml
+++ b/dev/Tpl/src/main/webapp/WEB-INF/web.xml
@@ -64,6 +64,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 </web-app>
