--- a/dev/Tpl/pom.xml
+++ b/dev/Tpl/pom.xml
@@ -86,6 +86,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>ejb3-persistence</artifactId>
+			<version>3.3.2.Beta1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.hsqldb</groupId>
